--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/star.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suya Mix Bistro</title>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Where Nigeria meets Texas on a skewer</title>
+    <meta name="description" content="SuyaMixBistro - Where Nigeria meets Texas on a skewer" />
+    <meta name="author" content="SuyaMixBistro" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/public/logo.svg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@suyamixbistro" />
+    <meta name="twitter:image" content="/public/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
