--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="description" content="SuyaMixBistro - Where Nigeria meets Texas on a skewer" />
     <meta name="author" content="SuyaMixBistro" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/logo.svg" />
+    <meta property="og:image" content="/public/metahead.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@suyamixbistro" />
-    <meta name="twitter:image" content="/public/logo.svg" />
+    <meta name="twitter:image" content="/public/metahead.png" />
   </head>
   <body>
     <div id="root"></div>
